--- a/Port/app/views/dashboard.html
+++ b/Port/app/views/dashboard.html
@@ -23,7 +23,7 @@
                     <h1>Welcome to Port</h1>
                     <br/>
                     <p>
-                        Port is a portfolio manager and analytics tool for financial assets.
+                        Port is a portfolio manager and analytics tool for financial assets. Have fun!
                     </p>
                     <p>Create a watchlist and add some stocks to begin monitoring.</p>
                 </div>
